@@ -3,14 +3,14 @@
 #
 logLik.coxph <- function(object, ...) {
     out <- object$loglik[2]
-    attr(out, 'df') <- sum(!is.na(coefficients(x)))
+    attr(out, 'df') <- sum(!is.na(coefficients(object)))
     class(out) <- 'logLik'
     out
     }
 
 logLik.survreg <- function(object, ...) {
     out <- object$loglik[2]
-    dd <- diag(x$var)
+    dd <- diag(object$var)
     attr(out, 'df') <- sum(!is.na(dd) & dd > 0)
     class(out) <- 'logLik'
     out
